is this the end, or bug ahead?

--- a/jgt.cabal
+++ b/jgt.cabal
@@ -14,6 +14,8 @@ executable site
     , aeson
     , lens
     , vector
+    , vector-algorithms
+    , unix
     , text
     , scientific
     , blaze-html
