--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@v2
       - run: nix profile install nixpkgs#python312Packages.pygments
       - run: nix build
+      - name: Rebuild and Sync webmentions
+        env:
+          WMTOKEN: $
       - run: ./result/bin/site rebuild
 
       - name: Deploy
