--- a/.github/workflows/webmentions-sync.yml
+++ b/.github/workflows/webmentions-sync.yml
@@ -1,28 +1,3 @@
-name: Build and deploy to GitHub Pages
-on: push
-
-jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: cachix/install-nix-action@v20
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-      - uses: DeterminateSystems/magic-nix-cache-action@v2
-      - run: nix profile install nixpkgs#python312Packages.pygments
-      - run: nix build
-      - name: Rebuild and Sync webmentions
-        env:
-          WMTOKEN: $
-        run: ./result/bin/site rebuild
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: docs
-
-
 name: Webmentions Sync and Redeploy
 
 on:
@@ -49,4 +24,4 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: docs
+          folder: _site
