--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - run: nix build
       - name: Rebuild and Sync webmentions
         env:
-          WMTOKEN: $
+          WMTOKEN: ${{ secrets.WMTOKEN }}
         run: ./result/bin/site rebuild -v
 
       - name: Commit webmentions to repository
