--- a/.github/workflows/webmentions-sync.yml
+++ b/.github/workflows/webmentions-sync.yml
@@ -17,9 +17,8 @@ jobs:
       - run: nix profile install nixpkgs#python312Packages.pygments
       - run: nix build
       - name: Rebuild and Sync webmentions
-        environment: github-pages
         env:
-          WMTOKEN: ${{ secrets.WMTOKEN }}
+          WMTOKEN: ${{ vars.WMTOKEN }}
         run: ./result/bin/site rebuild -v
 
       - name: Commit webmentions to repository
