--- a/.github/workflows/webmentions-sync.yml
+++ b/.github/workflows/webmentions-sync.yml
@@ -18,13 +18,13 @@ jobs:
       - run: nix build
       - name: Rebuild and Sync webmentions
         env:
-          WMTOKEN: pbj7jHLLhU_iUTPiavjsPg
+          WMTOKEN: ${{ secrets.WMTOKEN }}
         run: ./result/bin/site rebuild -v
 
       - name: Commit webmentions to repository
         env:
           COMMIT_MSG: |
-            Sync webmentions
+            Sync webmentions [skip actions]
         run: |
           git config user.email "maxfiialkovskyi@protonmais.com"
           git config user.name "maxfii"
