--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,11 +18,14 @@ jobs:
         run: ./result/bin/site rebuild -v
 
       - name: Commit webmentions to repository
-        run:
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           if git diff webmentions.json --quiet; then
+            echo "No changes in webmentions.json. Skipping commit."
+          else
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-
             git add webmentions.json
             git commit -m "Sync webmentions [skip actions]"
             git push origin test
