--- a/.github/workflows/webmentions-sync.yml
+++ b/.github/workflows/webmentions-sync.yml
@@ -24,15 +24,17 @@ jobs:
       - name: Commit webmentions to repository
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run:
+      - name: Check for changes and commit
+        run: |
           if git diff webmentions.json --quiet; then
+            echo "No changes in webmentions.json. Skipping commit."
+          else
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-
             git add webmentions.json
-            git commit -m "Sync webmentions [skip actions]"
-            git push origin test
+            git diff --quiet && git diff --staged --quiet || (git commit -m "Sync webmentions [skip actions]"; git push origin test)
           fi
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
